[package]
name = "chrono"
version = "0.1.0"
authors = ["SenYeezus <simpsonsenyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-macros = { path = "../chrono-macros"}

libc = "0.2.97"
bitflags = "1.2.1"
futures-util = { version = "0.3.15", default-features = false, features = ["async-await-macro"] }
heapless = {version = "0.7.10", features = ["x86-sync-pool"] }

defmt = "0.3.1"
conquer-once = { version = "0.3.2", default-features = false }
