[package]
name = "chrono"
version = "0.1.0"
authors = ["SenYeezus <simpsonsenyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-macros = { path = "../chrono-macros"}

libc = "0.2.97"
bitflags = "1.2.1"
futures-util = { version = "0.3.15", default-features = false, features = ["async-await-macro"] }
heapless = {version = "0.7.10", features = ["x86-sync-pool"] }
defmt = "0.3.1"
cortex-m = "0.7.4"
stm32f3xx-hal = { version = "0.9.0", features = ["ld", "stm32f303xc"] }
embedded-time = "0.12.1"
