[package]
name = "chrono"
version = "0.1.0"
authors = ["SenYeezus <simpsonsenyo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-macros = { path = "../chrono-macros" }

futures-util = { version = "0.3.15", default-features = false, features = [
    "async-await-macro",
] }
heapless = { version = "0.7.10", features = ["x86-sync-pool"] }
defmt = "0.3.1"
cortex-m = "0.7.4"
stm32f3xx-hal = { version = "0.9.0", features = ["ld", "stm32f303xc", "defmt"] }
embedded-time = "0.12.1"
enc28j60 = { git = "https://github.com/senyosimpson/enc28j60", branch = "master" }
smoltcp = { version = "0.8.1", default-features = false, features = [
    "async",
    "defmt",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
] }
embedded-io = { version = "0.3.0", features = [ "async"] }
