[package]
name = "examples"
version = "0.0.0"
authors = ["SenYeezus <simpsonsenyo@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { path = "../chrono"}
heapless = "0.7.10"

panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt-rtt = "0.3.2"
stm32f3 = { version = "0.14.0", features = ["stm32f303", "rt"] }
defmt = "0.3.1"
enc28j60 = { git = "https://github.com/senyosimpson/enc28j60", branch = "master" }
smoltcp = { version = "0.8.1", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
] }

# [[example]]
# name = "join"
# path = "join.rs"

[[example]]
name = "channel"
path = "channel.rs"

# [[example]]
# name = "tcp_read"
# path = "tcp_read.rs"

[[example]]
name = "sleep"
path = "sleep.rs"

[[example]]
name = "net2"
path = "net2.rs"

# [[example]]
# name = "drop_joinhandle"
# path = "drop_joinhandle.rs"