[package]
name = "echo-sync"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
chrono = { path = "../../chrono" }

heapless = { version = "0.7.10", features = ["x86-sync-pool"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
stm32f3 = { version = "0.14.0", features = ["stm32f303", "rt"] }
stm32f3xx-hal = { version = "0.9.0", features = ["ld", "stm32f303xc", "defmt"] }
enc28j60 = { git = "https://github.com/senyosimpson/enc28j60", branch = "master" }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
smoltcp = { version = "0.8.1", default-features = false, features = [
    "async",
    "defmt",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
] }