[package]
name = "metal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.23.0", features = ["full"] }
